[package]
name = "tradyman"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
futures = "0.3.31"
reqwest = { version = "0.12.28", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
termion = "4.0.6"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread"] }
tokio-tungstenite = "0.28.0"
tungstenite = { version = "0.28.0", features = ["native-tls"] }
